# GAMES101

./: README.md
Assignment1/code/: CMakeLists.txt  Triangle.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment2/code/: CMakeLists.txt  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  Shader.hpp  Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
pa0/pa0/: CMakeLists.txt  main.cpp
